--- a/style.css
+++ b/style.css
@@ -5,3 +5,19 @@ p {
 p.apple{
 	color: blue;
 }
+
+p.banana{
+	color: yellow;
+}
+
+p.coconut{
+	color: white;
+}
+
+p.date{
+	color: brown;
+{
+	
+p.elderberry{
+	color: purple;
+}
