removed swear word for shoulder peekers

--- a/style.css
+++ b/style.css
@@ -24,4 +24,4 @@ p {
 
 
 
-/*GET THE FUCK OUT OF MY ROOM IM PLAYING MINECRAFT!!!!!!!!*/
+/*GET THE FOCK OUT OF MY ROOM IM PLAYING MINECRAFT!!!!!!!!*/
